Dodala sam novosti na podstranicu Fashion

--- a/fashion.html
+++ b/fashion.html
@@ -24,7 +24,26 @@
 			<div id="glavni">
 				<div id="podstranice">
 					<h3>Fashion</h3>
-					
+					<div class="novost">
+						<p>March 23, 2015</p>
+						<h4>OOTD: WIDE</h4>
+						<img src="fashionPhoto1.jpg" alt="novost1" width=700>
+						<p> While cleaning out my closet and boxes, I'm finding different items that for a long time has been forgotten. One of my favorite findings may be these jeans. I don't know if it's because the wide and comfortable legs, or the soft tuch. Either way it's a fun pant!</p><br>
+						<a href="">View More Details</a>
+					</div>
+					<div class="novost">
+						<p>March 22, 2015</p>
+						<h4>LONDON STREET STYLE</h4>
+						<img src="fashionPhoto2.jpg" alt="novost2" width=700>
+						<p>The fashion month marathon runs on! Part two of fashion month is now under way in London.</p><br>
+						<a href="">View More Details</a>
+					</div>
+					<div class="novost">
+						<p>March 19, 2015</p>
+						<h4>WISHLIST UPDATE</h4>
+						<img src="fashionPhoto3.jpg" alt="novost3" width=700>
+						<a href="">View More Details</a>
+					</div>
 				</div>
 			</div>
 			<div id="desno">
