--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 					</div>
 			</div>
 			<div id="podnozje">
-				<p>Copyright (c) 2015</p>
+				<p>Copyright (c) 2015 EMFASHION.ba</p>
 			</div>
 		</div>
 	</body>
