--- a/fashion.html
+++ b/fashion.html
@@ -80,7 +80,7 @@
 					</div>
 			</div>
 			<div id="podnozje">
-				<p>Copyright (c) 2015</p>
+				<p>Copyright (c) 2015 EMFASHION.ba</p>
 			</div>
 		</div>
 	</body>
