--- a/projekat.html
+++ b/projekat.html
@@ -86,7 +86,7 @@
 					</div>
 			</div>
 			<div id="podnozje">
-				<p>Copyright (c) 2015</p>
+				<p>Copyright (c) 2015 EMFASHION.ba</p>
 			</div>
 		</div>
 	</body>
