Dodala sam nove linkove na eksterne web stranice

--- a/links.html
+++ b/links.html
@@ -25,10 +25,15 @@
 				<div id="podstranice">
 					<h3>Links</h3>
 					<ul class="moja_lista">
-						<li><a href="http://www.harpersbazaar.com/fashion/fashion-week/g4114/new-york-fashion-week-spring-2015/?slide=3" target="_blank">Link1</a></li>
-						<li><a href="http://shop.whowhatwear.com/boutique/boohoo" target="_blank">Link2</a></li>
-						<li><a href="http://four-pins.com/style/popular-fashion-brands-world-right-now/" target="_blank">Link3</a></li>
-						<li><a href="http://www.cosmopolitan.co.uk/fashion/style/advice/a34140/13-pieces-of-clothing-that-look-good-on-everyone/" target="_blank">Link4</a></li>
+						<li><a href="http://www.harpersbazaar.com/" target="_blank">harpersbazaar.com</a></li>
+						<li><a href="http://shop.whowhatwear.com/" target="_blank">shop.whowhatwear.com</a></li>
+						<li><a href="http://four-pins.com/" target="_blank">four-pins.com</a></li>
+						<li><a href="http://www.cosmopolitan.co.uk/" target="_blank">cosmopolitan.co.uk</a></li>
+						<li><a href="http://www.ysophisticates.com/" target="_blank">ysophisticates.com</a></li>
+						<li><a href="http://www.essiebutton.com/" target="_blank">essiebutton.com</a></li>
+						<li><a href="http://fashionista.com/" target="_blank">fashionista.com</a></li>
+						<li><a href="http://www.whowhatwear.com/" target="_blank">whowhatwear.com</a></li>
+						
 					</ul>	
 				</div>
 			</div>
