Dodala sam kontakt formu
Sada koristim HTML5
Koristila sam input, textarea, label, fieldset, atribut placeholder koji
potpuno identicno izgledaju na Chrome, Internet Explorer i Firefox

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+		<meta charset="UTF-8">
 		<title>Contact</title>
 		<link rel="stylesheet" type="text/css" href="stil.css">
 	</head>
@@ -25,8 +25,19 @@
 				<div id="podstranice">
 					<h3>Contact</h3>
 					<p>I love recieving emails from readers or followers, so please do not hesitate to contact me with queries or just general chit chat!</p>
-					Email:
-					<a href="" target="_blank">EmFashion@gmail.com</a>
+					<FORM>
+						<fieldset>
+							<label>NAME</label>
+							<input name="ime" type="text" placeholder="First and last name">
+							<label>EMAIL</label>
+							<input name="email" type="text" placeholder="example@domain.com">
+							<label>SUBJECT</label>
+							<input name="naslov" type="text" placeholder="Subject">
+							<label>YOUR MESSAGE</label>
+							<textarea name="poruka" placeholder="Type Here"></textarea>
+							<input type="submit" value="SEND">
+						</fieldset>
+					</FORM>
 				</div>
 			</div>
 			<div id="desno">
