--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 				<h1>EMFASHION</h1>
 				<h2><img src="star.png" alt="star" width=20 height=20> Shine like stars</h2>
 			</div>
-			<div id="meni">
+			<nav>
 				<ul>
 					<li><a href="projekat.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
@@ -20,7 +20,7 @@
 					<li><a href="beauty.html">Beauty</a></li>
 					<li><a href="links.html">Links</a></li>
 				</ul>
-			</div>
+			</nav>
 			<div id="glavni">
 				<div id="podstranice">
 					<h3>Contact</h3>
