--- a/fashion.html
+++ b/fashion.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+		<meta charset="UTF-8">
 		<title>About</title>
 		<link rel="stylesheet" type="text/css" href="stil.css">
 	</head>
@@ -11,7 +11,7 @@
 				<h1>EMFASHION</h1>
 				<h2><img src="star.png" alt="star" width=20 height=20> Shine like stars</h2>
 			</div>
-			<div id="meni">
+			<nav>
 				<ul>
 					<li><a href="projekat.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
@@ -20,13 +20,13 @@
 					<li><a href="beauty.html">Beauty</a></li>
 					<li><a href="links.html">Links</a></li>
 				</ul>
-			</div>
+			</nav>
 			<div id="glavni">
 				<div id="podstranice">
 					<h3>Fashion</h3>
 					<div class="novost">
 						<p>March 26, 2015</p>
-						<h4>The 10 Most Valuable Luxury Brand In The World</h4>
+						<h4>THE 10 MOST VALUABLE LUXURY BRAND IN THE WORLD</h4>
 						<TABLE>
 							<CAPTION></CAPTION>
 							<tr><th>Rank</th>
@@ -49,21 +49,21 @@
 					</div>
 					<div class="novost">
 						<p>March 23, 2015</p>
-						<h4>Ootd: Wide</h4>
+						<h4>OOTD: WIDE</h4>
 						<img src="fashionPhoto1.jpg" alt="novost1" width=700>
 						<p> While cleaning out my closet and boxes, I'm finding different items that for a long time has been forgotten. One of my favorite findings may be these jeans. I don't know if it's because the wide and comfortable legs, or the soft tuch. Either way it's a fun pant!</p><br>
 						<a href="">View More Details</a>
 					</div>
 					<div class="novost">
 						<p>March 22, 2015</p>
-						<h4>London Street Style</h4>
+						<h4>LONDON STREET STYLE</h4>
 						<img src="fashionPhoto2.jpg" alt="novost2" width=700>
 						<p>The fashion month marathon runs on! Part two of fashion month is now under way in London.</p><br>
 						<a href="">View More Details</a>
 					</div>
 					<div class="novost">
 						<p>March 19, 2015</p>
-						<h4>Wishlist Update</h4>
+						<h4>WISHLIST UPDATE</h4>
 						<img src="fashionPhoto3.jpg" alt="novost3" width=700>
 						<a href="">View More Details</a>
 					</div>
