--- a/projekat.html
+++ b/projekat.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+		<meta charset="UTF-8">
 		<title>Glavni html</title>
 		<link rel="stylesheet" type="text/css" href="stil.css">
 	</head>
@@ -11,7 +11,7 @@
 				<h1>EMFASHION</h1>
 				<h2><img src="star.png" ALT="star" width=20 height=20> Shine like stars</h2>
 			</div>
-			<div id="meni">
+			<nav>
 				<ul>
 					<li class="active"><a href="projekat.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
@@ -20,7 +20,7 @@
 					<li><a href="beauty.html">Beauty</a></li>
 					<li><a href="links.html">Links</a></li>
 				</ul>
-			</div>
+			</nav>
 			<div id="glavni">
 				<div class="novost">
 					<p>March 23, 2015</p>
