--- a/fashion.html
+++ b/fashion.html
@@ -16,7 +16,13 @@
 					<li><a href="projekat.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li class="active"><a href="fashion.html">Fashion</a></li>
+					<li id="dropdown"><a href="#">Fashion <span style="font-size: 9px">&#9660;</span></a>
+						<ul id="menu">
+							<li><a href="fashion.html">Home</a></li>
+							<li><a href="trends.html">Trends</a></li>
+							<li><a href="wear.html">3 ways to wear</a></li>
+						</ul>
+					</li>
 					<li><a href="beauty.html">Beauty</a></li>
 					<li><a href="links.html">Links</a></li>
 				</ul>
@@ -52,20 +58,20 @@
 						<h4>OOTD: WIDE</h4>
 						<img src="fashionPhoto1.jpg" alt="novost1" width=700>
 						<p> While cleaning out my closet and boxes, I'm finding different items that for a long time has been forgotten. One of my favorite findings may be these jeans. I don't know if it's because the wide and comfortable legs, or the soft tuch. Either way it's a fun pant!</p><br>
-						<a href="">View More Details</a>
+						<a href="#">View More Details</a>
 					</div>
 					<div class="novost">
 						<p>March 22, 2015</p>
 						<h4>LONDON STREET STYLE</h4>
 						<img src="fashionPhoto2.jpg" alt="novost2" width=700>
 						<p>The fashion month marathon runs on! Part two of fashion month is now under way in London.</p><br>
-						<a href="">View More Details</a>
+						<a href="#">View More Details</a>
 					</div>
 					<div class="novost">
 						<p>March 19, 2015</p>
 						<h4>WISHLIST UPDATE</h4>
 						<img src="fashionPhoto3.jpg" alt="novost3" width=700>
-						<a href="">View More Details</a>
+						<a href="#">View More Details</a>
 					</div>
 				</div>
 			</div>
@@ -106,5 +112,6 @@
 				<p>Copyright (c) 2015 EMFASHION.ba</p>
 			</div>
 		</div>
+		<script type="text/javascript" src="datoteka2.js"></script>
 	</body>
 </html>
