Rad sa tabelom putem AJAX-a

--- a/projekat.html
+++ b/projekat.html
@@ -22,6 +22,7 @@
 							<li><a onclick="otvori('fashion')">Home</a></li>
 							<li><a onclick="otvori('trends')">Trends</a></li>
 							<li><a onclick="otvori('wear')">3 ways to wear</a></li>
+							<li><a onclick="otvori('products')">Products</a></li>
 						</ul>
 					</li>
 					<li><a onclick="otvori('beauty')">Beauty</a></li>
@@ -99,5 +100,6 @@
 		<script type="text/javascript" src="datoteka1.js"></script>
 		<script type="text/javascript" src="datoteka2.js"></script>
 		<script type="text/javascript" src="ajax.js"></script>
+		<script type="text/javascript" src="proizvodi.js"></script>
 	</body>
 </html>
