Preimenovala sam projekat.html u index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="projekat.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a onclick="otvori('about')">About</a></li>
 					<li><a onclick="otvori('contact')">Contact</a></li>
 					<li id="dropdown"><a href="#">Fashion <span style="font-size: 9px">&#9660;</span></a>
